fix: [CVNG-2811]: misalignment of footer

--- a/src/modules/85-cv/components/CVSetupSourcesView/SetupSourceLayout/SetupSourceLayout.module.scss
+++ b/src/modules/85-cv/components/CVSetupSourcesView/SetupSourceLayout/SetupSourceLayout.module.scss
@@ -41,7 +41,7 @@ $footer-cta-height: 50px;
   display: flex;
   justify-self: flex-start;
   position: fixed;
-  left: 272px;
+  left: 291px;
   bottom: 0;
   padding: var(--spacing-small) 0 !important;
 
